<resources>
    <string name="app_name">CashCuk</string>
    <string name="app_name_ko">캐시쿡</string>
    <string name="str_network_error">네트워크 연결 상태를 확인해 주세요.</string>
    <string name="str_network_err">네트워크 연결 상태를 확인해 주세요.\n일부기능이 동작하지 않을 수 있습니다.</string>
    <string name="str_http_error">통신오류\n다시 시도해 주세요.</string>
    <string name="str_http_error_no_save">통신오류로 적립이 되지 않습니다.</string>
    <string name="str_msg_send_error">통신오류로 이용이 제한됩니다.\n앱 재실행 후 다시 시도해 주세요.</string>
    <string name="str_dlg_title">Cashcuk</string>
    <string name="str_cashcuk">cashcuk</string>
    <string name="str_search">검색</string>
    <string name="str_ok">확인</string>
    <string name="str_pssword_init">비밀번호 초기화</string>
    <string name="str_cancel">취소</string>
    <string name="str_close">닫기</string>
    <string name="str_yes">예</string>
    <string name="str_no">아니오</string>
    <string name="str_pre">이전</string>
    <string name="str_out_membeship">탈퇴하기</string>
    <string name="str_app_finish_msg">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="str_app_msg">캐시쿡!!!!\n500캐시 적립받고 시작하기\n1234</string>
    <string name="str_clipboard_copy">클립보드에 복사 되었습니다.</string>
    <string name="str_list_empty">내역이 존재하지 않습니다.</string>
    <string name="str_ad_empty">광고가 존재하지 않습니다.</string>
    <string name="str_select">선택</string>
    <string name="str_select_top">상위메뉴를 설정 해 주세요.</string>
    <string name="str_select_empty">선택 가능한 하위메뉴가 없습니다.</string>
    <string name="str_select_low_group">하위메뉴를 선택해 주세요.</string>
    <string name="str_select_area">지역 하위메뉴를 선택해 주세요.</string>
    <string name="str_area">지역</string>
    <string name="str_menu">메뉴</string>
    <string name="str_update_title">앱 업데이트</string>
    <string name="str_update_message">앱이 업데이트 되었습니다\n최신 버전으로 업데이트 해 주세요</string>
    <string name="str_login_addr_err">도메인을 입력해주세요.</string>
    <string name="str_input_id_err">아이디를 입력해 주세요.</string>
    <string name="str_input_pwd_err">비밀번호를 입력해 주세요.</string>
    <string name="str_email">이메일</string>
    <string name="str_pwd">비밀번호</string>
    <string name="str_pwd_chk">비밀번호\n확인</string>
    <string name="str_email_en">E-mail</string>
    <string name="str_pwd_en">Password</string>
    <string name="str_find_id_pwd">ID/PW 찾기</string>
    <string name="str_membership">회원가입</string>
    <string name="str_login">로그인</string>
    <string name="str_login_en">LOGIN</string>
    <string name="str_pwd_err">비밀번호를 잘못입력하셨습니다.</string>
    <string name="str_find_email_info">E-mail주소를 찾기위해 아래 항목을 입력해 주세요.</string>
    <string name="str_find_pwd_info">비밀번호를 찾기위해 아래 항목을 입력해 주세요.</string>
    <string name="str_find_email_ok">해당 정보로 가입된 E-mail 입니다.\n\n</string>
    <string name="str_no_data">일치하는 정보가 없습니다.</string>
    <string name="str_now_new_pwd_chk">새로운 비밀번호는\n현재 비밀번호와 같을 수 없습니다.</string>
    <string name="str_input_pwd_chk">비밀번호를 확인해주세요.</string>
    <string name="str_overlap_chk_err">E-mail 중복체크를 해주세요.</string>
    <string name="str_pwd_type_err">비밀번호는 특수문자를 포함한 6~16자 입니다.</string>
    <string name="str_new_pwd_type_err">새로운 비밀번호를 확인해주세요.\n비밀번호는 특수문자를 포함한 6~16자 입니다.</string>
    <string name="str_membership_pwd">특수문자를 포함한 6~16자</string>
    <string name="str_email_alrim">사용 가능한 이메일 입니다.\n\n입력하신 이메일은 비밀번호 찾기에 사용됩니다.\n\n이메일 주소가 올바르지 않을 경우\n비밀번호를 찾을 수 없습니다.</string>
    <string name="str_recommender_err">추천인 아이디가 존재하지 않습니다.\n확인 후 다시 시도해 주세요.</string>
    <string name="str_no_input_recommender_err">재추천 할 수 없는 아이디 입니다.\n추천인 아이디를 확인 후 다시 시도해 주세요.</string>
    <string name="str_overlap_member">이미 가입한 회원입니다.\n아이디를 잊으신 경우\n아이디찾기를 이용해주세요.</string>
    <string name="str_id_hint">이메일을 입력해주세요.</string>
    <string name="str_chk_err">오류발생으로 본인인증이 되지 않았습니다.\n확인 후 다시 시도해 주세요.</string>
    <string name="str_personal_info">기본정보</string>
    <string name="str_name">이름</string>
    <string name="str_chk_overlap">E-mail 중복체크</string>
    <string name="str_year">년</string>
    <string name="str_month">월</string>
    <string name="str_day">일</string>
    <string name="str_sel_month_err">월을 선택해 주세요.</string>
    <string name="str_email_type_err">이메일 형식을 확인 해주세요.</string>
    <string name="str_recommender_type_err">추천인 형식을 확인 해주세요.</string>
    <string name="str_member_err">이미 가입하셨습니다.\nE-mail을 잊었을 경우 E-mai찾기를 해주세요.</string>
    <string name="str_type_info">타입</string>
    <string name="str_user">일반</string>
    <string name="str_advertiser">광고주</string>
    <string name="str_adtitle">전단지</string>
    <string name="str_seladvertis">광고선택</string>
    <string name="str_alert">알림메시지</string>
    <string name="str_no_advertiser_type">\'광고주\'가입은 추후에 지원됩니다.</string>
    <string name="str_ad_send_default_info">광고 발송 기본정보</string>
    <string name="str_sel_ad_send_default_info">전체</string>
    <string name="str_ad_send_default_info_hint">선택해주세요</string>
    <string name="str_sel_ad_send_default_info_err">광고 발송 기본정보를 선택해주세요.</string>
    <string name="str_cities_hint">- 시/도 -</string>
    <string name="str_town_hint">- 시/군/구 -</string>
    <string name="str_cities">시/도</string>
    <string name="str_town">시/군/구</string>
    <string name="str_selector_cities">\'- 시/도 -\'를 선택해 주세요.</string>
    <string name="str_selector_town">\'- 시/군/구 -\'를 선택해 주세요.</string>
    <string name="str_no_residence">사는 곳을 입력해주세요.</string>
    <string name="str_no_sigun">선택 할 시/군/구가 없습니다.</string>
    <string name="str_no_addr">지역을 모두 입력해주세요.</string>
    <string name="str_recommender">추천인(선택사항)</string>
    <string name="str_recommender_title">추천인\nE-mail</string>
    <string name="str_input_recommender_hint">ex)cashcuk@cashcuk.com</string>
    <string name="str_bitrh_day_max_year">잘못입력 된 값입니다.(범위: 1900~올해)</string>
    <string name="str_bitrh_day_err">잘못입력 된 값입니다.</string>
    <string name="str_join">가입하기</string>
    <string name="str_membership_success">가입완료</string>
    <string name="str_welcome">회원가입이 정상적으로\n완료되었습니다.</string>
    <string name="str_welcome_sub">로그인 후 캐시쿡만의\n특별한 Cash Save를 즐겨보세요!</string>
    <string name="str_go_login">로그인 하기</string>
    <string name="str_terms_agree_title">약관동의</string>
    <string name="str_terms_agree">위 약관의 내용을 이해하였으며 그 내용에 동의하십니까?</string>
    <string name="str_terms_agree_all_info">아래 약관의 내용을 이해하였으며 그 내용에 모두 동의하십니까?</string>
    <string name="str_terms_agree_all">전체동의</string>
    <string name="str_agreement">이용약관</string>
    <string name="str_agreement_age">(만 14세 이상 사용가능합니다.)</string>
    <string name="str_use_age">만 14세 이상 사용가능합니다.</string>
    <string name="str_chk_agreement1">위 약관의 내용을 이해하셨으며 그 내용에 동의하십니까?</string>
    <string name="str_agree">동의함</string>
    <string name="str_privacy_agree">개인정보 수집·이용·제 3자 제공동의</string>
    <string name="str_agree_err">서비스 이용약관과 개인정보 취급방침에\n동의하여 주시기 바랍니다.</string>
    <string name="str_phone_num_change">휴대폰번호 수정</string>
    <string name="str_mobile_authentication_title">휴대폰인증</string>
    <string name="str_mobile_authentication_msg">확실한 회원 관리 체계를 위해\n휴대폰 인증 후 진행됩니다.\n(만 14세미만 회원가입불가)</string>
    <string name="str_mobile_authentication_under">만19세미만</string>
    <string name="str_mobile_authentication_over">만19세이상</string>
    <string name="str_empty_phone_num">휴대폰 번호를 입력해 주세요.</string>
    <string name="str_empty_authentication_num">인증번호를 입력해 주세요.</string>
    <string name="str_authentication_time_out_txt">* 3분 안에 인증번호를 인증해 주세요.</string>
    <string name="str_remaining_time">남은시간:</string>
    <string name="str_chk_authentication_num">인증번호를 요청 후 확인해 주세요.</string>
    <string name="str_phone_num">휴대폰</string>
    <string name="str_use_id">* 사용 가능한 이메일 입니다.</string>
    <string name="str_not_use_id">* 사용 불가능한 이메일 입니다.</string>
    <string name="str_input_again_id">사용 가능한 이메일로 변경해주세요.</string>
    <string name="str_input_birth_date">생년월일을 입력해 주세요.</string>
    <string name="str_birth_date_title">생년월일</string>
    <string name="str_find_email_title">E-mail 찾기</string>
    <string name="str_find_email_err">존재하지 않는 이메일 입니다.</string>
    <string name="str_find_no_email">해당 정보로 가입된 이메일이 없습니다.</string>
    <string name="str_find_email_name">이름</string>
    <string name="str_find_email_birth_date">생년월일(ex.19880101)</string>
    <string name="str_find_pwd_title">비밀번호 찾기</string>
    <string name="str_find_pwd_email">이메일</string>
    <string name="str_find_pwd_authorization_code_send">인증번호 요청</string>
    <string name="str_find_pwd_authorization_code">인증번호</string>
    <string name="str_find_pwd_authorization_code_err">인증번호가 일치하지 않습니다.\n다시 시도하십시오.</string>
    <string name="str_input">아래 항목을 입력해 주세요.</string>
    <string name="str_input_email_err">이메일을 입력해 주세요.</string>
    <string name="str_chk_email_err">이메일을 확인해주세요.</string>
    <string name="str_chk_email">이메일이 확인되었습니다.</string>
    <string name="str_send_pwd">입력하신 휴대폰 번호로\n임시 비밀번호가 발송되었습니다.</string>
    <string name="str_init_pwd">패스워드가 %1$s로 \n초기화 되었습니다.\n 로그인 화면으로 이동 됩니다.</string>
    <string name="str_home">Home</string>
    <string name="str_ad_count">우리동네 광고 수</string>
    <string name="str_ad_list">적립</string>
    <string name="str_save_point">적립되었습니다.</string>
    <string name="str_no_save_point">해당 광고는 적립되지 않습니다.</string>
    <string name="str_save_point_over">이미 본 광고는\n포인트 적립이 되지 않습니다.</string>
    <string name="str_interest_ad">관심광고</string>
    <string name="str_tab_interest_ad">관심</string>
    <string name="str_setting">설정</string>
    <string name="str_my_point_en">My Point</string>
    <string name="str_point_detail_view">Point내역 상세보기</string>
    <string name="str_push_list_view">Push 보관함 가기</string>
    <string name="str_point_add1">무료충전1</string>
    <string name="str_point_add2">무료충전2</string>
    <string name="str_push_detail_view">Push 상세보기</string>
    <string name="str_push_state">Push 상태</string>
    <string name="str_affiliation_friend_recommend">친구추천</string>
    <string name="str_affiliation_friend_recommend_num">친구 추천 수</string>
    <string name="str_affiliation_friend_recommend_point">친구 추천 포인트</string>
    <string name="str_point">p</string>
    <string name="str_kakako">카카오톡</string>
    <string name="str_sms">문자</string>
    <string name="str_copy_url">URL복사</string>
    <string name="str_greade_success">평가되었습니다.</string>
    <string name="str_my_ad_add_succese">관심광고로 등록되었습니다.</string>
    <string name="str_my_ad_minus_succese">관심광고 해제 되었습니다.</string>
    <string name="str_my_ad_add_chk">마이광고로 등록하시겠습니까?</string>
    <string name="str_my_ad_minus_chk">마이광고에서 삭제하시겠습니까?</string>
    <string name="str_point_more">+ 더 보기</string>
    <string name="str_point_en">Point</string>
    <string name="str_point_list_title">포인트 내역</string>
    <string name="str_my_point">나의포인트</string>
    <string name="str_accrue_point_list">누적포인트 내역</string>
    <string name="str_use_point_list">사용포인트 내역</string>
    <string name="str_accrue_point">누적포인트</string>
    <string name="str_save_point_title">적립포인트</string>
    <string name="str_use_point">사용포인트</string>
    <string name="str_nominator_point">추천인 포인트</string>
    <string name="str_point_use">사용</string>
    <string name="str_point_list">내역 상세보기</string>
    <string name="str_detail">내역</string>
    <string name="str_content">내용</string>
    <string name="str_now_pwd">현재비밀번호</string>
    <string name="str_new_pwd">새로운비밀번호</string>
    <string name="str_company_introduce_main1">캐시쿡은 모바일 광고 장치\n특허 제 10-1233721호로 회원이면 누구나 통화화면을 통해 캐릭터와 메세지를 전송할 수 있는 플랫폼을 구축하였습니다.\n또한, 푸시광고를 통해 원하는 시간, 연령, 지역별 등 맞춤타깃을 설정해 효율적인 광고효과를 낼 수 있습니다.</string>
    <string name="str_company_introduce_main2">이뿐 아니라 리워드앱 중 가장 높은 리워드로 회원들의 만족도를 높이고 더불어 더 많은 회원들을 확보해 광고주와 회원 간의 소통구가 될 것입니다.</string>
    <string name="str_company_introduce1">캐시쿡은 회원 스스로가 주인이 되는 국민 어플리케이션으로서, 모바일 광고업계를 선도하는 기업으로 성장 할 것입니다.</string>
    <string name="str_company_introduce2">2017년을 기점으로 캐시쿡은 중국, 미국, 인도, 아시아, 유럽, 등으로 사업영역을 확장해 글로벌 기업이 될 것입니다.</string>
    <string name="str_company_introduce3">최고의 O2O 어플리케이션으로서 실시간 맞춤광고라는 혁신적인 플랫폼으로 광고시장의 패러다임을 다시 세워 가치 있는 어플리케이션이 될 것입니다.</string>
    <string name="str_next">다음</string>
    <string name="str_ad_add">추가 +</string>
    <string name="str_date">날짜</string>
</resources>