<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.cashcuk.MainTitleBar
        android:id="@+id/main_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.cashcuk.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/agreement_margin"
        android:background="@drawable/bg1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/item_margin_left"
        android:paddingTop="@dimen/item_margin_left">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="vertical"
            android:paddingLeft="@dimen/item_margin_left"
            android:paddingRight="@dimen/item_margin_left">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lineSpacingExtra="@dimen/txt_line_margin"
                android:text="@string/str_company_introduce_main1"
                android:textColor="@color/color_white"
                android:textSize="@dimen/authentication_txt_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin_left"
                android:gravity="center_vertical"
                android:lineSpacingExtra="@dimen/txt_line_margin"
                android:text="@string/str_company_introduce_main2"
                android:textColor="@color/color_white"
                android:textSize="@dimen/authentication_txt_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/item_margin_left"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/item_margin_left"
            android:paddingRight="@dimen/item_margin_left">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/item_margin_left"
                    android:lineSpacingExtra="@dimen/txt_line_margin"
                    android:text="@string/str_company_introduce1"
                    android:textColor="@color/color_ad_dlg_info_bg"
                    android:textSize="@dimen/terms_company_introduction_txt_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/item_padding"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/item_margin_left"
                    android:lineSpacingExtra="@dimen/txt_line_margin"
                    android:text="@string/str_company_introduce2"
                    android:textColor="@color/color_ad_dlg_info_bg"
                    android:textSize="@dimen/terms_company_introduction_txt_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/item_padding"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/item_margin_left"
                    android:lineSpacingExtra="@dimen/txt_line_margin"
                    android:text="@string/str_company_introduce3"
                    android:textColor="@color/color_ad_dlg_info_bg"
                    android:textSize="@dimen/terms_company_introduction_txt_size" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>